deployment/mosquitto/mosquitto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  namespace: offgrid
spec:
  ingressClassName: traf
  tls:
  - hosts:
    - offgrid.sg.sysmoltd.com
    secretName: mosquitto-server-cert
  rules:
  - host: offgrid.sg.sysmoltd.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mosquitto
            port: 
              number: 8883
